// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lsp didSave > clears diagnostics when error is fixed and file is saved 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=src/Root.res]",
  "    lsp.did_save.compile_dependencies[module=Root]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_error",
  "    lsp.did_save.typecheck_dependents[module=Root]",
  "  lsp.did_save[file=src/Root.res]",
  "    lsp.did_save.compile_dependencies[module=Root]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=Root]",
]
`;

exports[`lsp didSave > compiles files from external npm packages in the dependency closure 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/with-deps]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "      lsp.discover_package[name=rescript-bun]",
  "        lsp.source_dir[dir=node_modules/rescript-bun/src, recursive=true]",
  "        lsp.source_dir[dir=node_modules/rescript-bun/test, recursive=false]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/with-deps]",
  "    build.load_package_sources[package=rescript-bun]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=53]",
  "      build.parse[dirty_modules=52]",
  "        build.parse_file[module=Assert-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=AsyncHooks-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=BinaryLike-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Buffer-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Bun-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=BunSqlite-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=ChildProcess-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Cluster-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Cookie-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=CookieMap-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Crypto-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Dns-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Errors-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Event-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=EventEmitter-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Exports-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Fs-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Global-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Globals-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=HTMLRewriter-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Http-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Http2-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Https-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Internal__JsTypeReflection-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Main-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Module-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Net-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Os-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Path-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=PerfHooks-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Process-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=QueryString-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Readline-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Redis-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=SQL-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Stream-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=StringBuffer-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=StringDecoder-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=StringEncoding-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Test-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Timers-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Tls-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Tty-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Types-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Url-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=UsesBun, package=@rewatch-test/with-deps]",
  "        build.parse_file[module=Util-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=V8-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=VM-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=WithDeps, package=@rewatch-test/with-deps]",
  "        build.parse_file[module=WorkerThreads-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Zlib-RescriptBun, package=rescript-bun]",
  "      build.compile",
  "        build.compile_wave[file_count=18]",
  "          build.compile_file[module=AsyncHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=BunSqlite-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Cookie-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Dns-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Event-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Exports-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Global-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Internal__JsTypeReflection-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Os-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Path-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=PerfHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=QueryString-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=StringEncoding-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Timers-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Types-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Url-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Util-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=WithDeps, package=@rewatch-test/with-deps, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=19]",
  "          build.compile_file[module=Buffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=CookieMap-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Errors-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=EventEmitter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Module-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Redis-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Test-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=23]",
  "          build.compile_file[module=Assert-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=BinaryLike-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Globals-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Stream-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=StringBuffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=StringDecoder-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=VM-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Zlib-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=18]",
  "          build.compile_file[module=Bun-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=ChildProcess-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Crypto-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Fs-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=HTMLRewriter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Net-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Process-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Readline-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=SQL-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=V8-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=WorkerThreads-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=8]",
  "          build.compile_file[module=Http-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Main-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Tls-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Tty-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=4]",
  "          build.compile_file[module=Cluster-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Http2-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Https-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=1]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=UsesBun, package=@rewatch-test/with-deps, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=packages/with-deps/src/UsesBun.res]",
  "    lsp.did_save.compile_dependencies[module=UsesBun]",
  "      incremental_build[module_count=53]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=UsesBun, package=@rewatch-test/with-deps]",
  "        build.compile",
  "          build.compile_wave[file_count=17]",
  "            build.compile_file[module=AsyncHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=BunSqlite-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Cookie-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Dns-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Event-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Exports-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Global-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Internal__JsTypeReflection-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Os-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Path-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=PerfHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=QueryString-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=StringEncoding-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Timers-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Types-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Url-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Util-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=19]",
  "            build.compile_file[module=Buffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=CookieMap-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Errors-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=EventEmitter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Module-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Redis-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Test-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=23]",
  "            build.compile_file[module=Assert-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=BinaryLike-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Globals-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Stream-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=StringBuffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=StringDecoder-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=VM-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Zlib-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=18]",
  "            build.compile_file[module=Bun-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=ChildProcess-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Crypto-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Fs-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=HTMLRewriter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Net-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Process-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Readline-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=SQL-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=V8-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=WorkerThreads-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=8]",
  "            build.compile_file[module=Http-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Main-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Tls-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Tty-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=4]",
  "            build.compile_file[module=Cluster-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Http2-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Https-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=1]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=UsesBun, package=@rewatch-test/with-deps, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=UsesBun]",
]
`;

exports[`lsp didSave > does not compile unrelated files when a file is saved 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=packages/library/src/Unrelated.res]",
  "    lsp.did_save.compile_dependencies[module=Unrelated]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=Unrelated]",
]
`;

exports[`lsp didSave > does not recompile npm package modules on subsequent saves 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/with-deps]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "      lsp.discover_package[name=rescript-bun]",
  "        lsp.source_dir[dir=node_modules/rescript-bun/src, recursive=true]",
  "        lsp.source_dir[dir=node_modules/rescript-bun/test, recursive=false]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/with-deps]",
  "    build.load_package_sources[package=rescript-bun]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=53]",
  "      build.parse[dirty_modules=52]",
  "        build.parse_file[module=Assert-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=AsyncHooks-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=BinaryLike-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Buffer-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Bun-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=BunSqlite-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=ChildProcess-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Cluster-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Cookie-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=CookieMap-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Crypto-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Dns-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Errors-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Event-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=EventEmitter-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Exports-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Fs-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Global-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Globals-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=HTMLRewriter-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Http-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Http2-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Https-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Internal__JsTypeReflection-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Main-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Module-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Net-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Os-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Path-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=PerfHooks-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Process-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=QueryString-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Readline-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Redis-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=SQL-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Stream-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=StringBuffer-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=StringDecoder-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=StringEncoding-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Test-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Timers-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Tls-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Tty-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Types-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Url-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=UsesBun, package=@rewatch-test/with-deps]",
  "        build.parse_file[module=Util-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=V8-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=VM-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=WithDeps, package=@rewatch-test/with-deps]",
  "        build.parse_file[module=WorkerThreads-RescriptBun, package=rescript-bun]",
  "        build.parse_file[module=Zlib-RescriptBun, package=rescript-bun]",
  "      build.compile",
  "        build.compile_wave[file_count=18]",
  "          build.compile_file[module=AsyncHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=BunSqlite-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Cookie-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Dns-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Event-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Exports-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Global-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Internal__JsTypeReflection-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Os-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Path-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=PerfHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=QueryString-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=StringEncoding-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Timers-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Types-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Url-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Util-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=WithDeps, package=@rewatch-test/with-deps, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=19]",
  "          build.compile_file[module=Buffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=CookieMap-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Errors-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=EventEmitter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Module-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Redis-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Test-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=23]",
  "          build.compile_file[module=Assert-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=BinaryLike-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Globals-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Stream-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=StringBuffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=StringDecoder-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=VM-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Zlib-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=18]",
  "          build.compile_file[module=Bun-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=ChildProcess-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Crypto-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Fs-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=HTMLRewriter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Net-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Process-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Readline-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=SQL-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=V8-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=WorkerThreads-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=8]",
  "          build.compile_file[module=Http-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Main-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Tls-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Tty-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=4]",
  "          build.compile_file[module=Cluster-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Http2-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_file[module=Https-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "        build.compile_wave[file_count=1]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=UsesBun, package=@rewatch-test/with-deps, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=packages/with-deps/src/UsesBun.res]",
  "    lsp.did_save.compile_dependencies[module=UsesBun]",
  "      incremental_build[module_count=53]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=UsesBun, package=@rewatch-test/with-deps]",
  "        build.compile",
  "          build.compile_wave[file_count=17]",
  "            build.compile_file[module=AsyncHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=BunSqlite-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Cookie-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Dns-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Event-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Exports-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Global-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Internal__JsTypeReflection-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Os-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Path-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=PerfHooks-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=QueryString-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=StringEncoding-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Timers-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Types-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Url-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Util-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=19]",
  "            build.compile_file[module=Buffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=CookieMap-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Errors-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=EventEmitter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Module-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Redis-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Test-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=23]",
  "            build.compile_file[module=Assert-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=BinaryLike-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Globals-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Stream-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=StringBuffer-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=StringDecoder-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=VM-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Zlib-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=18]",
  "            build.compile_file[module=Bun-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=ChildProcess-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Crypto-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Fs-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=HTMLRewriter-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Net-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Process-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Readline-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=SQL-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=V8-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=WorkerThreads-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=8]",
  "            build.compile_file[module=Http-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Main-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Tls-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Tty-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=4]",
  "            build.compile_file[module=Cluster-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Http2-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "            build.compile_file[module=Https-RescriptBun, package=rescript-bun, suffix=.mjs, module_system=esmodule, namespace=RescriptBun]",
  "          build.compile_wave[file_count=1]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=UsesBun, package=@rewatch-test/with-deps, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=UsesBun]",
  "  lsp.did_save[file=packages/with-deps/src/UsesBun.res]",
  "    lsp.did_save.compile_dependencies[module=UsesBun]",
  "      incremental_build[module_count=53]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=UsesBun, package=@rewatch-test/with-deps]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=UsesBun, package=@rewatch-test/with-deps, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=UsesBun]",
]
`;

exports[`lsp didSave > preserves JS output from previous saves when saving an unrelated file 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=src/Root.res]",
  "    lsp.did_save.compile_dependencies[module=Root]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=Root]",
  "  lsp.did_save[file=packages/library/src/Unrelated.res]",
  "    lsp.did_save.compile_dependencies[module=Unrelated]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=Unrelated]",
]
`;

exports[`lsp didSave > produces JS output for dependent files when a file is saved 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=src/Root.res]",
  "    lsp.did_save.compile_dependencies[module=Root]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=Root]",
]
`;

exports[`lsp didSave > produces JS output when a file is saved 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=src/Root.res]",
  "    lsp.did_save.compile_dependencies[module=Root]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "    lsp.did_save.typecheck_dependents[module=Root]",
]
`;

exports[`lsp didSave > publishes diagnostics for dependent files when a used API changes on save 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=packages/library/src/Library.res]",
  "    lsp.did_save.compile_dependencies[module=Library]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_error",
  "    lsp.did_save.typecheck_dependents[module=Library, dependent_count=2]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=0]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_error",
]
`;

exports[`lsp didSave > publishes diagnostics when saving a file with an error 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=7]",
  "      lsp.discover_package[name=@rewatch-test/app]",
  "        lsp.source_dir[dir=packages/app/src, recursive=true]",
  "      lsp.discover_package[name=@rewatch-test/library]",
  "        lsp.source_dir[dir=packages/library/src, recursive=true]",
  "      lsp.discover_package[name=rewatch-test-fixture]",
  "        lsp.source_dir[dir=src, recursive=true]",
  "  lsp.initial_build",
  "    build.load_package_sources[package=@rewatch-test/app]",
  "    build.load_package_sources[package=@rewatch-test/library]",
  "    build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    incremental_build[module_count=4]",
  "      build.parse[dirty_modules=4]",
  "        build.parse_file[module=App, package=@rewatch-test/app]",
  "        build.parse_file[module=Library, package=@rewatch-test/library]",
  "        build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.parse_file[module=Unrelated, package=@rewatch-test/library]",
  "      build.compile",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "  lsp.did_save[file=src/Root.res]",
  "    lsp.did_save.compile_dependencies[module=Root]",
  "      incremental_build[module_count=4]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Root, package=rewatch-test-fixture]",
  "        build.compile",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "          build.compile_wave[file_count=1]",
  "            build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "        build.compile_error",
  "    lsp.did_save.typecheck_dependents[module=Root]",
]
`;
